--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test-spec": "npx jest --coverage",
     "test-cov": "",
     "test": "npm run build && npm run lint && npm run test-cov",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "push": "npm run lint && npm run test-spec && git push origin master && npm version patch &&  npm publish"
   },
   "engines": {
     "node": ">=10.0.0"
