--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "lint": "tslint \"src/**/*.ts\" --fix --project tsconfig.json",
     "build": "rimraf dist && tsc",
     "test-spec": "npx jest --coverage",
-    "test": "npm run build && npm run lint && npm run test-cov",
-    "prepare": "npm run build",
+    "prepare": "npm run build && npm run lint",
+    "codecov": "codecov",
     "push": "npm run lint && npm run test-spec && git push origin master && npm version patch &&  npm publish"
   },
   "engines": {
